--- a/arch/arm64/boot/dts/embedian/imx8mp-smarc-common.dtsi
+++ b/arch/arm64/boot/dts/embedian/imx8mp-smarc-common.dtsi
@@ -13,6 +13,11 @@
 	model = "Embedian i.MX8MPlus SMARC-iMX8MP CPU Module";
 	compatible = "embedian,imx8mp-smarc", "fsl,imx8mp";
 
+	aliases {
+		rtc0 = &s35390a;
+		rtc1 = &snvs_rtc;
+	};
+
 	memory@40000000 {
 		device_type = "memory";
 		reg = <0x0 0x40000000 0 0xc0000000>,
