--- a/arch/arm64/boot/dts/embedian/fsl-smarcimx8mq-hdmi.dtsi
+++ b/arch/arm64/boot/dts/embedian/fsl-smarcimx8mq-hdmi.dtsi
@@ -39,7 +39,7 @@
         hdmi_on_hog {
                 gpio-hog;
                 gpios = <1 0>;
-                output-high;
+                output-low;
                 line-name = "hdmi_on";
         };
 };
